styles/Home.module.css
/* ... */
.sec-btn{
  margin-top: 2em;
  margin-bottom: 1em;
  border: solid 2px #fff;
  color: #fff;
  padding: 2px 5px;
  text-transform: uppercase;
  transition: ease-in-out 0.9s;
  /* allows links to be clickable over the border overlay z-index:1 */
  z-index: 2;

}

/* ================ Landing Sections (Colors and Shapes) ================ */

.sec-left-orange{
  color: #fff;
  font-weight: 700;
  text-shadow: -2px 0 var(--brand-purple), 0 2px var(--brand-purple), 2px 0 var(--brand-purple), 0 -2px var(--brand-purple);
  letter-spacing: 1.5px;  /* Adjust this value to change the letter spacing */
}

.sec-left-orange-bg{
  position: relative;
}

.sec-left-orange-bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -50;
  background-image: url('/images/shapes/brand-orange-shape-001.png');
  background-repeat: no-repeat;
  background-size: 100% 90%;
  opacity: 0.8;  /* Adjust this value to change the opacity */
}

.sec-right-purple{
  color: #fff;
  font-weight: 700;
  text-shadow: -2px 0 var(--brand-orange), 0 2px var(--brand-orange), 2px 0 var(--brand-orange), 0 -2px var(--brand-orange);
  letter-spacing: 1.5px;  /* Adjust this value to change the letter spacing */
}

.sec-right-purple-bg{
  position: relative;
}

.sec-right-purple-bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -50;
  background-image: url('/images/shapes/brand-purple-shape-001.png');
  transform: scaleX(-1);
  background-repeat: no-repeat;
  background-size: 100% 90%;
  opacity: 0.8;  /* Adjust this value to change the opacity */
}

/* ================ Landing Sections (Gradients) ================ */

.sec-gradient-bg {
  position: relative !important;
}

.sec-gradient-bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -50;
  background-image: url('https://res.cloudinary.com/dxnxtxxep/image/upload/v1705759011/Sista%20Kim%27s/brandGradientBorder_m6vn3g.png');
  background-repeat: no-repeat;
  background-size: 98% 90%;
  background-position: center;
}

.sec-gradient-bg-overlay {
  position: relative !important;
  width: 85%;
  transition: width 0.5s ease-in-out;
}

@media (max-width: 1245px) {
  .sec-gradient-bg-overlay {
    width: 90%;
  }
}

@media (max-width: 1165px) {
  .sec-gradient-bg-overlay {
    width: 100%;
  }
}

.sec-gradient-bg-overlay::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-image: url('https://res.cloudinary.com/dxnxtxxep/image/upload/v1705759011/Sista%20Kim%27s/brandGradientBorder_m6vn3g.png');
  background-repeat: no-repeat;
  background-size: 98% 90%;
  background-position: center;
}

@media (max-width: 1024px) {
  .sec-gradient-bg::before {
    background-size: 97% 100%;
    background-image: url('https://res.cloudinary.com/dxnxtxxep/image/upload/v1705759012/Sista%20Kim%27s/brandGradientBorderMD_jrinxh.png');
  }
}

@media (max-width: 768px) {
  .sec-gradient-bg::before {
    background-size: 97% 100%;
    background-image: url('https://res.cloudinary.com/dxnxtxxep/image/upload/v1705759011/Sista%20Kim%27s/brandGradientBorder_m6vn3g.png');
  }
}

/* ================ Slider ================ */
.slider-img {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  overflow: hidden;
}

/* ================ Review Scroller ================ */
  /* 
   * Adjust height this value to match the height of your content 
   * position: relative; is important for the animation to work as it allows us to make both content bars 100vw wide
   */

.scrolling-review {
  overflow: hidden;
  display: flex;
  /* width: 2500px !important; */
  width: 200vw !important;
  position: relative;
  height: 15em; 
  overflow: hidden;
}

@media (max-width: 768px) {
  .scrolling-review {
    width: 300vw !important;
  }
}

@media (max-width: 640px) {
  .scrolling-review {
    width: 400vw !important;
  }
}

.scrolling-review-content{
  position: absolute;
  width: 100% !important; 
  animation: scroll 50s linear infinite;
}
.scrolling-review-content:hover{
  animation-play-state: paused;
}


.scrolling-review-content-bar-1 {
  display: flex;
  position: absolute;
  justify-content: space-around;
  width: 100% !important; 
  color: #fff;
  background: var(--brand-gradient-background-color);
}

  /* 
   * left: 100vw; places the content bar off screen to the right
   */
.scrolling-review-content-bar-2 {
  display: flex;
  position: absolute;
  /* left: 2499px; */
  left: 199vw;
  justify-content: space-around;
  width: 100% !important; /* Twice the width of the parent */
  color: #fff;
  background: var(--brand-gradient-background-reverse-color);
}

@media (max-width: 768px) {
  .scrolling-review-content-bar-2 {
    left: 299vw !important;
  }
}

@media (max-width: 640px) {
  .scrolling-review-content-bar-2{
    left: 399vw !important;
  }
}

/* ================ Reviews ================ */
.review {
  color: #fff;
  width: 20em;
  height: 15em
}

.review-text{
  /* height: 8em; a height component here will stop text-overflow: ellipsis; from working */
  display: -webkit-box;
  -webkit-line-clamp: 3; /* number of lines to display */
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.review-link{
  border: solid 2px #fff;
  margin-top: 20px;
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 2.5px;
}

.review-google{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  width: 100vw;
  background-color: var(--brand-purple);
  transition: background-color ease-in-out 0.9s;
}
.review-google:hover{
  background-color: var(--brand-orange);
  transition: background-color ease-in-out 0.9s;
}

.review-google-link{
  color: #fff;
  font-weight: 700;
  width: 100%;
  height: 100%;
  text-align: center;
  padding-top: 0.5em;
}
/* ... */

